modify faq and legal, change home to be more understandable

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -9,7 +9,7 @@
           <p class="intro">Vous avez certainement beaucoup de questions sur Pickalgo et c'est normal. En soit le système ne ressemble à rien de ce que vous connaissez déjà. C'est pourquoi nous avons imaginé les questions que vous pourriez avoir, et avons tenté d'y apporter une réponse ci-dessous. Si vous avez d'autres questions, ou si aimez le projet et souhaitez nous adresser des remarques, n'hésitez pas à <%= link_to "nous contacter", contact_path, class: "help-link" %>.</p>
         </div>
         <ul class="summary-faq">
-          <li><a href="#question-0">Ethymologie</a></li>
+          <li><a href="#question-0">Vocab & Ethimologie</a></li>
           <li><a href="#question-1">Quel problème Pickalgo souhaite résoudre ?</a></li>
           <li><a href="#question-2">La proposition de valeur</a></li>
           <li><a href="#question-3">Comment ça marche ?</a></li>
@@ -27,13 +27,13 @@
               <div class="box-with-circle-icon"><i class="fas fa-book"></i><br></div>
               <div class="card-faq">
                 <h3 class="card-faq-question">
-                  Ethymologie
+                  Vocab & Ethimologie
                   <br><span>Source: Le gros Robert, édition 2018</span>
                 </h3>
                 <div class="card-faq-answer">
-                  <p>Pickalgo peut-être décomposé en deux parties:
-                  <br><b>Pick</b> qui en anglais veut dire choisir choisir ainsi que cueillir<br><b>Algo</b> pour algorithme mais également "quelque chose" en portugais.</p>
-                  <p>Sur Pickalgo notre algorithme détermine le meilleur prix que doit adopter une promo pour satisfaire le vendeur et l'acheteur</p>
+                  <p>Pickalgo c'est l'association étrange de deux mots:
+                  <br><p><u><b>Pick</b></u>: choisir ainsi que cueillir en anglais<br><p><u><b>Algo</b></u>: pour algorithme mais également "quelque chose" en portugais.</p>
+                  <p><u><b>Campagne</b></u> : période pendant laquelle vous pouvez proposer votre prix promo pour un produit (dure 7 sept jours à compter de la publication du produit).</p>
                 </div>
               </div>
             </div>
@@ -47,7 +47,7 @@
                   <br><span>n°1 sur la liste des 99 problèmes de Jay-Z</span>
                 </h3>
                 <div class="card-faq-answer">
-                  <p>Lorsque l'on vend un produit, il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème c'est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer qui permettra d'atteindre au mieux l'objectif final fixé.</b>
+                  <p>Il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème c'est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer</b> qui permettra d'atteindre au mieux l'objectif final fixé.
                   </p>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                   <br><span>L'atout Pick(algo) à tous vos coeurs</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <ul><b>Pour nos testeurs :</b>
+                    <ul><b>Pour les testeurs :</b>
                       <li>Découvrir de supers produits et services</li>
                       <li>Vous faire bénéficier des meilleures promos avant tout le monde</li>
                     </ul>
@@ -80,12 +80,11 @@
               <div class="box-with-circle-icon"><i class="fas fa-cog"></i><br></div>
               <div class="card-faq">
                 <h3 class="card-faq-question">
-                  Comment ça marche
+                  Comment ça marche ?
                   <br><span>C'est pas si sorcier, n'est-ce pas Jamy ?</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Sur Pickalgo les membres intéressées par un produit ou service nous transmettent des propositions d'achats du montant qu'ils sont prêts à payer pour en faire l'acquisition. A partir de toutes les propositions récoltées pour un même produit, nous pouvons grâce à notre algorithme, calculer le prix le plus bas dont les membres de notre communauté peuvent bénéficier sans détériorer la marge du vendeur. Si le montant de votre proposition est supérieur au prix le plus bas que nous avons calculé, vous remportez le deal et ne payez que le prix remisé ! Autrement, vous ne pouvez pas bénéficier du deal, mais n'avez rien à payer.</p>
-                    <p>Après la campagne d'achat, nous aidons également le vendeur à optimiser sa politique tarifaire grâce aux propositions d'achat récoltées pendant la campagne.</p>
+                    <p>Un produit ou service vous plait ? Aidez son vendeur à comprendre quel prix pratiquer pour réussir son opération de promo. Pour cela, c'est simple, dites-nous quel prix maximal vous seriez prêt à payer pour faire l'acquisition du produit dès à présent. Chaque proposition émise par nos testeurs est étudiée pour mesurer son impact sur l'objectif que s'est fixé le vendeur (augmentation des volumes, de la marge…). Nous faisons ensuite bénéficier nos testeurs de la promo optimale qui permet de compenser la meilleure réduction du prix par une augmentation des ventes.</p>
                 </div>
               </div>
             </div>
@@ -99,7 +98,7 @@
                   <br><span>Toi plus moi, plus eux plus tous ceux qui le veulent</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Tous les membres de Pickalgo peuvent soumettre un produit pour lequel ils souhaiteraient lancer une campagne. Si vous souhaitez présenter votre propre produit, vous le pouvez également. Pensez simplement à signaler qu'il s'agit de votre produit dans le formulaire d'ajout de celui-ci.</p>
+                    <p>Tous les membres de Pickalgo peuvent soumettre un produit pour lequel ils souhaiteraient bénéficier d'une promo. Si vous souhaitez présenter votre propre produit, vous le pouvez également. Pensez simplement à signaler qu'il s'agit de votre produit dans le formulaire d'ajout de celui-ci afin que nous prenions contact avec vous plus facilement.</p>
                 </div>
               </div>
             </div>
@@ -155,7 +154,7 @@
                   <br><span>Parce que le plus important c'est de participer</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Le prix minimal dont nous souhaitons vous faire bénéficier est basé sur le nombre de personnes acquérant le produit sur la campagne. En confirmant votre participation le vendeur connait exactement ses volumes de production, ses coûts, ce qui nous permet de calculer le prix minimal dont il est possible de vous faire bénéficier. Si la confirmation n'était pas obligatoire, les volumes pourraient varier en fonction des ajouts / désistements sur la campagne, et le prix minimal calculé serait donc faussé.<b> Vous n'avez rien à payer pour confirmer votre participation</b>, vous vous engagez simplement à ne pas vous désister si nous pouvons vous faire bénéficier d'un prix encore plus bas.</p>
+                    <p>Le calcul de lma meilleure promo dont nous pouvons vous faire bénéficier est basé sur le nombre de personnes acquérant le produit sur la campagne. En confirmant votre participation le vendeur connait exactement ses volumes de production, ses coûts, ce qui nous permet de calculer le prix optimal dont il est possible de vous faire bénéficier. Si la confirmation n'était pas obligatoire, les volumes pourraient varier en fonction des ajouts / désistements sur la campagne, et la meilleure promo calculée serait donc faussée.<b> Vous n'avez rien à payer pour confirmer votre participation</b>, vous vous engagez simplement à ne pas vous désister si nous pouvons vous faire bénéficier d'un prix plus bas que celui que vous avez choisi.</p>
                 </div>
               </div>
             </div>
@@ -179,7 +178,7 @@
               <div class="box-with-circle-icon"><i class="glyphicon glyphicon-pencil"></i><br></div>
               <div class="card-faq">
                 <h3 class="card-faq-question">
-                  Puis-je modifier / supprimer mon pick ?
+                  Puis-je modifier / supprimer ma proposition de prix ?
                   <br><span>Win the yes needs the no to win against the no</span>
                 </h3>
                 <div class="card-faq-answer">
