--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Déterminez...</div>
         <div class="step-text">
-          le prix maximal auquel la promo serait pour vous encore intéressante
+          le prix maximal vous seriez prêt à payer pour faire en l'acquisition dès à présent
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
@@ -46,7 +46,7 @@
         <%= image_tag "successful_purchase.svg", class: "action-image", alt: "icon image successful purchase svg" %>
         <div class="quote">Profitez...</div>
         <div class="step-text">
-          d'un prix encore plus bas que celui que vous aviez initialement proposé
+          du meilleur prix promotionnel que nous avons calculé
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 180 €</li>
-              <li>La promo obtimale est à 140 €</li>
+              <li>La promo optimale est à 140 €</li>
               <li>Vous obtenez le produit pour 140 €</li>
             </ul>
           </div>
