--- a/app/views/pages/mentions_legales.html.erb
+++ b/app/views/pages/mentions_legales.html.erb
@@ -1,32 +1,34 @@
 <%= render 'shared/navbar' %>
 <div class="page-container">
-  <div class="infos-container">
-    <%= render 'pages/navigation', page: @page %>
-    <div class="content-box">
-      <div class="title">
-        <h1>Mentions légales</h1>
-      </div>
-      <h2>Hébergement du site</h2>
-        <p>
-          Le site est hébergé par Amazon Web Services (via Heroku)
-        </p>
-        <p>
-          Amazon Web Services, Inc.
-          P.O. Box 81226
-          Seattle, WA 98108-1226
-          http://aws.amazon.com
-        </p>
-      <h2>Confidentialité et Données personnelles</h2>
-        <p>
-          Conformément à la loi Informatique et Libertés (Loi N°78-17 du 6 janvier 1978), nous vous informons que la collecte des informations dont la saisie est obligatoire, est nécessaire au traitement de vos données. Vous disposez d'un droit d'accès, de modification, de rectification et de suppression des données vous concernant. Vous pouvez l'exercer en adressant un e-mail à : <a href="mailto:contact@pickalgo.com">contact@pickalgo.com</a>
-        </p>
-        <h2>Edition et réalisation du site</h2>
+  <div class="content-container">
+    <div class="infos-container">
+      <%= render 'pages/navigation', page: @page %>
+      <div class="content-box">
+        <div class="title">
+          <h1>Mentions légales</h1>
+        </div>
+        <h2>Hébergement du site</h2>
           <p>
-            Jorge Ruivinho, CEO et fondateur de Pickalgo
-            <br>64 rue de la Pompe, 75116 Paris.
-            <br><a href="mailto:jorge@pickalgo.com">jorge@pickalgo.com</a>
+            Le site est hébergé par Amazon Web Services (via Heroku)
           </p>
-        <i>Actualisées le 15/03/2018</i>
+          <p>
+            Amazon Web Services, Inc.
+            P.O. Box 81226
+            Seattle, WA 98108-1226
+            http://aws.amazon.com
+          </p>
+        <h2>Confidentialité et Données personnelles</h2>
+          <p>
+            Conformément à la loi Informatique et Libertés (Loi N°78-17 du 6 janvier 1978), nous vous informons que la collecte des informations dont la saisie est obligatoire, est nécessaire au traitement de vos données. Vous disposez d'un droit d'accès, de modification, de rectification et de suppression des données vous concernant. Vous pouvez l'exercer en adressant un e-mail à : <a href="mailto:contact@pickalgo.com">contact@pickalgo.com</a>
+          </p>
+          <h2>Edition et réalisation du site</h2>
+            <p>
+              Jorge Ruivinho, CEO et fondateur de Pickalgo
+              <br>47 rue Rouelle, 75015 Paris.
+              <br><a href="mailto:jorge@pickalgo.com">jorge@pickalgo.com</a>
+            </p>
+          <i>Actualisées le 15/03/2018</i>
+      </div>
     </div>
   </div>
 </div>
