small text adjustment

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -47,7 +47,7 @@
                   <br><span>n°1 sur la liste des 99 problèmes de Jay-Z</span>
                 </h3>
                 <div class="card-faq-answer">
-                  <p>Il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème c'est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer</b> qui permettra d'atteindre au mieux l'objectif final fixé.
+                  <p>Il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer</b> qui permettra d'atteindre au mieux l'objectif final fixé.
                   </p>
                 </div>
               </div>
