--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -23,7 +23,7 @@
              <div class="smalltext">s</div>
            </div>
         </div>
-        <p id="welcome-text"><span>Inscription confirmée</span><br>Vous faites partie des 500 premiers testeurs à avoir accès en exclusivité à Pickalgo lors de son lancement. Encore un peu de patience…</p>
+        <p id="welcome-text"><span>Inscription confirmée</span><br>Vous faites partie des 500 premiers testeurs à avoir accès en exclusivité à Pickalgo lors de son lancement. Encore un peu de patience avant le lancement…</p>
     </div>
   </div>
 </div>
