correct faq page mispell mistake

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -154,7 +154,7 @@
                   <br><span>Parce que le plus important c'est de participer</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Le calcul de lma meilleure promo dont nous pouvons vous faire bénéficier est basé sur le nombre de personnes acquérant le produit sur la campagne. En confirmant votre participation le vendeur connait exactement ses volumes de production, ses coûts, ce qui nous permet de calculer le prix optimal dont il est possible de vous faire bénéficier. Si la confirmation n'était pas obligatoire, les volumes pourraient varier en fonction des ajouts / désistements sur la campagne, et la meilleure promo calculée serait donc faussée.<b> Vous n'avez rien à payer pour confirmer votre participation</b>, vous vous engagez simplement à ne pas vous désister si nous pouvons vous faire bénéficier d'un prix plus bas que celui que vous avez choisi.</p>
+                    <p>Le calcul de la meilleure promo dont nous pouvons vous faire bénéficier est basé sur le nombre de personnes acquérant le produit sur la campagne. En confirmant votre participation le vendeur connait exactement ses volumes de production, ses coûts, ce qui nous permet de calculer le prix optimal dont il est possible de vous faire bénéficier. Si la confirmation n'était pas obligatoire, les volumes pourraient varier en fonction des ajouts / désistements sur la campagne, et la meilleure promo calculée serait donc faussée.<b> Vous n'avez rien à payer pour confirmer votre participation</b>, vous vous engagez simplement à ne pas vous désister si nous pouvons vous faire bénéficier d'un prix plus bas que celui que vous avez choisi.</p>
                 </div>
               </div>
             </div>
