change phrase home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Déterminez...</div>
         <div class="step-text">
-          le prix maximal vous seriez prêt à payer pour faire en l'acquisition dès à présent
+          le prix maximal vous seriez prêt à payer pour en faire l'acquisition dès à présent
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
