--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -1,4 +1,3 @@
-<%= render 'cookies_eu/consent_banner' %>
 <div class="page-container">
   <div class="nav-and-banner" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
     <header class="header-home">
@@ -9,16 +8,15 @@
         <% end %>
       </div>
       <div class="right-links">
-        <%= link_to "Partenaires", partners_path %>
+        <%= link_to "Testeurs", home_path %>
         <%= link_to "Contact", contact_path %>
-        <%= link_to "Connexion", new_user_session_path %>
+        <%= link_to "Clients", new_user_session_path %>
       </div>
-      <%= render "pages/right-links-small" %>
     </header>
     <div class="banner-container">
       <div class="banner-content">
-        <h1>Devenez testeur de promos !</h1>
-        <p class="concept">Parce qu'il est difficile pour un vendeur de trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde.
+        <h1>Le prix d'une promo ne s'invente pas, il se découvre.</h1>
+        <p class="concept">Acquisition, fidélisation, déstockage, volumes, CA, marge… Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
         </p>
         <div class="cta-links">
           <a href="#features-container">
