save partners page

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -10,7 +10,7 @@
       <div class="right-links">
         <%= link_to "Testeurs", home_path %>
         <%= link_to "Contact", contact_path %>
-        <%= link_to "Clients", new_user_session_path %>
+        <%= link_to "Espace-pro", new_user_session_path %>
       </div>
     </header>
     <div class="banner-container">
