--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,6 +44,7 @@
   font-size: 15px;
   a {
     color: #4d4d5e;
+    white-space: nowrap;
     margin: 0 20px;
     text-transform: uppercase;
     padding: 15px;
