--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -76,7 +76,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    min-height: calc(70vh - 80px)
+    min-height: calc(80vh - 80px)
   }
 
   .banner-content{
@@ -151,7 +151,7 @@
   }
 
 
-  #features-container {
+  #how-it-works {
     &:focus {
       outline: none;
     }
