add scrollreveal how it works

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -60,21 +60,21 @@
     <div class="how-it-works">
       <h3>Et ensuite ?</h3>
       <div class="steps">
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="fourth">
           <%= image_tag "dashboard.svg", class: "action-image", alt: "icon image  dashboard analyse svg" %>
           <div class="quote-orange">Analyse</div>
           <div class="step-text">
             Nous vous fournissons les données et les analyses relatives à la campagne
           </div>
         </div>
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
           <div class="quote-orange">Décision</div>
           <div class="step-text">
             Grace aux analyses, décidez du prix qui vous permet d'atteindre l'objectif souhaité
           </div>
         </div>
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="sixth">
           <%= image_tag "no_win.svg", class: "action-image", alt: "icon image successful purchase svg" %>
           <div class="quote-orange">Commandes</div>
           <div class="step-text">
