--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,14 +62,14 @@
     <div class="how-it-works">
       <h3>Comment ça marche ?</h3>
       <div class="steps">
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="fourth">
           <%= image_tag "analyze.svg", class: "action-image", alt: "icon image analyse svg" %>
           <div class="quote-orange">Nous calculons...</div>
           <div class="step-text">
             la promo qui permet de compenser la meilleure réduction du prix par une augmentation des ventes
           </div>
         </div>
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
           <div class="quote-orange">C'est gagné si</div>
           <div class="step-text">
@@ -80,7 +80,7 @@
             </ul>
           </div>
         </div>
-        <div class="icon-and-text-no-shaddow">
+        <div class="icon-and-text-no-shaddow" id="sixth">
           <%= image_tag "no_win.svg", class: "action-image", alt: "icon image successful purchase svg" %>
           <div class="quote-orange">Rien de perdu</div>
           <div class="step-text">
