save responsive style

--- a/app/views/pages/_right-links-testor.html.erb
+++ b/app/views/pages/_right-links-testor.html.erb
@@ -4,7 +4,7 @@
     <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
       <li>
         <%= link_to partners_path do %>
-          <i class="fas fa-store"></i> <%= t(".partners", default: "Partenaires") %>
+          <i class="fas fa-store"></i> <%= t(".pro", default: "Espace pro") %>
         <% end %>
       </li>
       <li>
@@ -14,7 +14,7 @@
       </li>
       <li>
         <%= link_to new_user_session_path do %>
-          <i class="fas fa-user-circle"></i> <%= t(".legal", default: "Connexion") %>
+          <i class="fas fa-user-circle"></i> <%= t(".legal", default: "Mon compte") %>
         <% end %>
       </li>
     </ul>
