--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Contact", contact_path %>
         <%= link_to "Mon Compte", new_user_session_path %>
       </div>
-      <%= render "pages/right-links-small" %>
+      <%= render "pages/right-links-testor" %>
     </header>
     <div class="banner-container">
       <div class="banner-content">
