--- a/app/views/pages/_right-links-pro.html.erb
+++ b/app/views/pages/_right-links-pro.html.erb
@@ -1,22 +1,19 @@
-<div class="right-links-menu">
-  <div class="dropdown">
-    <i class="fas fa-bars dropdown-toggle" aria-hidden="true" id="dropdown-icon", data-toggle="dropdown"></i>
-    <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-      <li>
-        <%= link_to partners_path do %>
-          <i class="fas fa-user-circle"></i> <%= t(".testeur", default: "Espace testeur") %>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to contact_path do %>
-          <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to new_user_session_path do %>
-          <i class="fas fa-store"></i> <%= t(".legal", default: "Mon compte pro") %>
-        <% end %>
-      </li>
-    </ul>
+<div id="myNav" class="overlay">
+
+  <!-- Button to close the overlay navigation -->
+  <a href="javascript:void(0)" class="closebtn fas fa-times"></a>
+
+  <!-- Overlay content -->
+  <div class="overlay-content">
+    <%= link_to home_path do %>
+      <i class="fas fa-user-circle"></i> <%= t(".testeur", default: "Espace testeur") %>
+    <% end %>
+    <%= link_to contact_path do %>
+      <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
+    <% end %>
+    <%= link_to new_user_session_path do %>
+      <i class="fas fa-store"></i> <%= t(".legal", default: "Mon compte pro") %>
+    <% end %>
   </div>
+
 </div>
