--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <%= render 'cookies_eu/consent_banner' %>
+<%= render 'right-links-testor' %>
 <div class="page-container">
   <div class="nav-and-banner" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
     <header class="header-home">
@@ -13,7 +14,9 @@
         <%= link_to "Contact", contact_path %>
         <%= link_to "Mon Compte", new_user_session_path %>
       </div>
-      <%= render "pages/right-links-testor" %>
+      <div class="right-links-menu">
+        <i class="fas fa-bars"></i>
+      </div>
     </header>
     <div class="banner-container">
       <div class="banner-content">
