reponsive page pro works with overlay

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -24,7 +24,7 @@
         </p>
         <div class="cta-links">
           <a href="#features-container">
-            <div class="btn-white go-to">Concept</div>
+            <div class="btn-white go-to" id="concept">Concept</div>
           </a>
           <%= link_to new_user_registration_path, class:"btn-orange cta-link" do %>
             Créér un compte pro
