remove focus on how it works container when internal link

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -23,7 +23,7 @@
         <p class="concept">Acquisition, fidélisation, déstockage, volumes, CA, marge… Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
         </p>
         <div class="cta-links">
-          <a href="#features-container">
+          <a href="#how-it-works">
             <div class="btn-white go-to" id="concept">Concept</div>
           </a>
           <%= link_to new_user_registration_path, class:"btn-orange cta-link" do %>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="how-it-works" id="features-container">
+  <div class="how-it-works" id="how-it-works">
     <h3>Comment ça marche ?
     </h3>
     <div class="steps">
