add order image partners page

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
-          <%= image_tag "no_win.svg", class: "action-image", alt: "icon image successful purchase svg" %>
+          <%= image_tag "order.svg", class: "action-image", alt: "icon image successful order svg" %>
           <div class="quote-orange">Commandes</div>
           <div class="step-text">
             Validez les commandes de nos testeurs au prix que vous aurez déterminé
