create lead model to allow pros to contact us easilly. create new and create actions

--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -35,7 +35,7 @@ h1 {
   margin: 20px 0;
 }
 
-#new_user, #registrate {
+#new_user, #registrate, #new_lead {
   width: 70%;
 }
 
@@ -135,7 +135,7 @@ h1 {
     padding: 20px;
   }
 
-  #new_user, #registrate {
+  #new_user, #registrate, #new_lead {
     width: 100%;
   }
 
