--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -126,11 +126,22 @@ input[type=number]::-webkit-outer-spin-button {
   text-align: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  position: relative
 }
 
-  .modal-title{
+.modal-header:before, .modal-header:after {
+    content: "" !important;
+}
+
+  .modal-title {
     text-align: center;
     font-size: 25px;
+  }
+
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
   }
 
 
