--- a/app/views/pages/_right-links-pro.html.erb
+++ b/app/views/pages/_right-links-pro.html.erb
@@ -11,7 +11,7 @@
     <%= link_to contact_path do %>
       <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
     <% end %>
-    <%= link_to new_user_session_path do %>
+    <%= link_to inscription_pro_path do %>
       <i class="fas fa-store"></i> <%= t(".legal", default: "Mon compte pro") %>
     <% end %>
   </div>
