--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -45,7 +45,9 @@ input[type=number]::-webkit-outer-spin-button {
   outline: none !important;
 } */
 
-
+.invalid-feedback {
+  color: #C03334;
+}
 
 .nav-tabs > li.active > a {
   border: none !important;
