--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -15,9 +15,9 @@
           <p class="reset-instructions">Saisissez l'adresse email que vous nous avez indiquée lors de votre inscription. Nous allons vous envoyer un lien pour choisir un nouveau mot de passe.</p>
 
           <div class="form-inputs">
-            <div id="input-and-icon-email">
+            <div class="input-and-icon">
               <%= f.input :email, required: true, label: false, autofocus: true, placeholder:'Email' %>
-              <span id="icon-envelope" class="fas fa-envelope"></span>
+              <span class="icon fas fa-envelope"></span>
             </div>
           </div>
 
